# fieldless_enum_tools

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
impl/: Cargo.toml
impl/internals/: Cargo.toml
impl/internals/src/: All.rs  FromToStr  Not.rs  lib.rs
impl/src/: All.rs  Not.rs  lib.rs  utils.rs
impl/src/FromToStr/: mod.rs
impl/src/FromToStr/attrs/: inner.rs  mod.rs  outer.rs
src/: lib.rs
tests/: mod.rs
tests/All/: mod.rs  pass.rs
tests/All/fail/: enum-with-data.rs  enum-with-data.stderr  not-an-enum.rs  not-an-enum.stderr
tests/FromToStr/: mod.rs  pass.rs
tests/FromToStr/fail/: duplicate-str.rs  duplicate-str.stderr
tests/Not/: mod.rs  pass.rs
tests/Not/fail/: emptynot.rs  emptynot.stderr
