[package]
name = "fieldless_enum_tools"
version = "0.1.0"
edition = "2018"
rust-version = "1.36"
repository = "https://github.com/matheuz1210/fieldless-enum-tools"
license = "MIT OR Apache-2.0"

[dependencies]
fieldless_enum_tools_impl = { version = "0.1.0", path = "impl" }
serde = { version = "1.0.142", optional = true }


[features]
default = ["std"]
std = []
alloc = []

[workspace]
include = ["impl"]

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "tests"
path = "tests/mod.rs"
