[package]
name = "fieldless_enum_tools"
description = "tools for enums without any fields"
version = "0.1.0"
edition = "2018"
rust-version = "1.37"
repository = "https://github.com/mati1210/fieldless-enum-tools"
license = "MIT OR Apache-2.0"

[dependencies]
fieldless_enum_tools_impl = { version = "^0.1.0", path = "impl" }
serde = { version = "1.0", optional = true, default-features = false }

# has to be normal dependecy because it dev-dependencies can't be optional
criterion = { version = "0.3", optional = true }

[features]
default = ["std"]
std = []
alloc = []

[workspace]
members = ["impl", "impl/internals"]

[dev-dependencies]
trybuild = "1.0"
fieldless_enum_tools_internals = { path = "impl/internals" }
syn = "1.0"

[[test]]
name = "tests"
path = "tests/mod.rs"

[[bench]]
required-features = ["criterion"]
name = "bench"
harness = false
