[package]
name = "fieldless_enum_tools_impl"
description = "tools for enums without any fields - implementation"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/mati1210/fieldless-enum-tools"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
